@startuml

title __MAPLOADER's Class Diagram__\n

  package  {
    class Coordinate {
    }
  }
  

  package  {
    class Destination {
    }
  }
  

  package  {
    class MapDemo {
    }
  }
  

  package  {
    class Pathfind {
    }
  }
  

  package  {
    class Pathfinding {
    }
  }
  

  package  {
    class Person {
    }
  }
  

  package  {
    class Target {
    }
  }
  

  package  {
    class Targets {
    }
  }
  

  package  {
    package Tiled {
      class Tile {
      }
    }
  }
  

  package  {
    package Tiled {
      class TiledLayer {
      }
    }
  }
  

  package  {
    package Tiled {
      class TiledMap {
      }
    }
  }
  

  package  {
    package Tiled {
      class TiledTile {
      }
    }
  }
  

  package  {
    package Tiled {
      class TiledTileMap {
      }
    }
  }
  

  package  {
    package Tiled {
      class TiledTileSet {
      }
    }
  }
  

  MapDemo -up-|> Application
  MapDemo o-- TiledMap : map
  MapDemo o-- Pathfind : p
  Pathfind o-- Coordinate : target
  Person o-- Tile : currentTile
  Person o-- Target : target
  Target o-- Pathfind : pathfind


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
